fix some feedback about alignment

--- a/css/content.css
+++ b/css/content.css
@@ -7,27 +7,27 @@
 	margin: 0 auto;
 }
 
-/* line */
-.line-vertical{
-	width:100%;
-	height: 3px;
-	margin-top:30px;
-	margin-bottom:30px;
-	background: #E5E2DE none repeat;
+.content-site::after{
+	clear: both;
+}
+.content-site::before, .content-site::after {
+    content: "";
+    display: table;
+    line-height: 0;
 }
 
 /* cont site body */
 .content-site-body{
     border-top-style: solid;
     border-top-width: 3px;
-	float:left;
+	float: left;
 	margin-top:50px;
 	padding-top:20px;
 }
 
 	/* body content left */
 	.content-site-body .body-left{
-		width:59em;
+		width: 59em;
 	}
 	
 	/* Overview */
@@ -41,18 +41,18 @@
 		
 	/*Featured Sites*/
 	.body-left .feature-content{
-		width:100%;
+		width: 100%;
 		border-radius: 8px;
 		-moz-border-radius: 8px;
 		-webkit-border-radius: 8px;
 		background: #E5E2DE;
-		margin:20px 0px;
-		padding:20px 15px 40px 17px ;
+		margin: 20px 0px;
+		padding: 20px 15px 40px 17px ;
 		position: relative;
 	}
 
 		.feature-content .imageView{
-			margin:16px;
+			margin: 16px;
 			box-shadow: -4px -4px  4px -4px #000;
 		}
 		
@@ -67,14 +67,14 @@
 			font-size: 60px;
 			font-weight: 100;
 			opacity: 0.5;
-			top:90px;
-			line-height:30px;
+			top: 90px;
+			line-height: 30px;
 			position: absolute;
-			margin:5px 5px 5px 5px;
+			margin: 5px 5px 5px 5px;
 			width: 40px;
 			height: 40px;
 			text-align: center;
-			text-decoration:none;
+			text-decoration: none;
 			vertical-align: middle;
 		}
 		/*hover arrow of carousel*/
@@ -83,18 +83,18 @@
 		}
 		
 			.arrow-carousel .arowright{
-				right:15px;
-				left:auto;
+				right: 15px;
+				left: auto;
 			}
 			.arrow-carousel .arowleft{
-				right:auto;
-				left:15px;
+				right: auto;
+				left: 15px;
 			}
 			
 
 		.feature-content .image-groupt{
-			margin:0 auto;
-			width:85%;
+			margin: 0 auto;
+			width: 85%;
 		}
 
 		.feature-content .viewall{
@@ -108,26 +108,26 @@
 	/* body-left-love*/
 	/*Users love and Developer Love*/
 	.body-left .body-left-love{
-		margin:20px 0px;
+		margin: 20px 0px;
 	}
 
 		.body-left-love .list-love  ul{
 			list-style-type: square;
-			margin-top:20px;
+			margin-top: 20px;
 		}
 
 		.body-left-love .list-love  li{
 			 height : 25px;
-			 font-size:13.5px;
-			 margin-left:15px;
+			 font-size: 13.5px;
+			 margin-left: 15px;
 		}
 
 
 /* body content right */
 .content-site-body .body-right{
-	width:19em;
-	padding-left:7em;
-	margin-top:20px;
+	width: 19em;
+	padding-left: 7em;
+	margin-top: 20px;
 }
 
 	.body-right .body-right-content{
@@ -135,46 +135,48 @@
 		-moz-border-radius: 5px;
 		-webkit-border-radius: 5px;
 		background: #E5E2DE;
-		padding:20px 0px 1px 0px;
+		padding: 20px 0px 1px 0px;
 	}
 
 		.body-right-content .board-black{
-			background:#222 none repeat scroll 0 0;
-			color:#08c;
+			background: #222 none repeat scroll 0 0;
+			color: #08c;
 			border-radius: 3px;
-			font-size:12px;
-			padding:10px 10px 20px 10px;
-			margin:0px 12px;
+			-moz-border-radius: 3px;
+			-webkit-border-radius: 3px;
+			font-size: 12px;
+			padding: 10px 10px 20px 10px;
+			margin: 0px 12px;
 			line-height:20px;
 		}
 		
 		.body-right-content .unstyle{
-			list-style:none;
-			margin:25px 15px ;
+			list-style: none;
+			margin: 25px 15px ;
 		}
 
 		.body-right-content .unstyle li{
-			height:50px;
+			height: 50px;
 		}
 
 		.body-right-content .unstyle a {
             margin-top: 10px;
-			font-size:16px;
-			font-weight:bold;
+			font-size: 16px;
+			font-weight: bold;
 			text-transform: uppercase;
-			color:#222; 
-			background-color:transparent; 
-			text-decoration:none;
+			color: #222; 
+			background-color: transparent; 
+			text-decoration: none;
 		}
 		
 		.body-right-content .unstyle a:hover{
-			text-decoration:underline;
+			text-decoration: underline;
 			
 		}
 		
 		.body-right-content .unstyle img {
-			padding:7px;
-			margin-right:5px;
+			padding: 7px;
+			margin-right: 5px;
 			background: #BD362F;
 			border-radius: 3px;
 			-moz-border-radius: 3px;
@@ -184,27 +186,27 @@
 
 	.body-right em{
 		font-size: 12px;
-		margin-top:15px;
-		font-style:italic;
+		margin-top: 15px;
+		font-style: italic;
 	}
 
 /*body-bottom*/
 /*Recent Mentions*/
 .content-site-body  .body-bottom{
-	display:inline-block;
-	float:left;
+	display: inline-block;
+	float: left;
 }
 
 	.body-bottom .community-block{
-		width:17.5em;
-		float:left;
-		margin-left:4.5em;
-		margin-top:10px;
+		width: 17.5em;
+		float: left;
+		margin-left: 4.5em;
+		margin-top: 10px;
 	}
 	.body-bottom .community-block-first{
-		width:17.5em;
-		float:left;
-		margin-top:10px;
+		width: 17.5em;
+		float: left;
+		margin-top: 10px;
 	}
 	
 /* image forkme in right-top screen */
